force-app/main/default/objects/Account/fields/Aadhaar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_Number__c</fullName>
    <description>CKYC Id for Aadhaar Number</description>
    <inlineHelpText>CKYC Id for Aadhaar Number</inlineHelpText>
    <label>CKYC Id</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>