force-app/main/default/objects/Account/fields/Chronic_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Conditions__c</fullName>
    <label>Chronic Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>