force-app/main/default/objects/Account/fields/Known_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Known_Allergies__c</fullName>
    <label>Known Allergies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>